# netv-custom

./: Dockerfile  Dockerfile.ffmpeg  README.md  auth.py  auth_test.py  cache.py  cache_test.py  docker-compose.synology.yml  docker-compose.yml  entrypoint.sh  epg.py  epg_test.py  ffmpeg_command.py  ffmpeg_command_test.py  ffmpeg_session.py  ffmpeg_session_test.py  m3u.py  m3u_test.py  main.py  main_test.py  pyproject.toml  testing.py  util.py  util_test.py  xtream.py  xtream_test.py
.github/workflows/: build.yml
@eaDir/: Dockerfile.ffmpeg@SynoEAStream  docker-compose.synology.yml@SynoEAStream  netv-ffmpeg-cuda12.4.tar.gz@SynoEAStream
cache/: epg.db  live_data.json  server_settings.json
static/js/: app.js  favorites-grid.js  player.js  settings.js  virtual-guide.js
templates/: base.html  error.html  guide.html  login.html  player.html  search.html  settings.html  setup.html
tools/: alignm3u.py  example.m3u  install-ffmpeg.sh  install-letsencrypt.sh  install-netv.sh  install-prereqs.sh  uninstall-netv.sh  xtream2m3u.py  zap2xml.py
